--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ if (markerFound == 1) {
 <!-- END: Add Image Target (marker) -->
 
 <!-- BEGIN: Unity Compiled Objects -->
-<a-video width="1" height="0.5727043" src="#Video_Asset_0" class="intersectable" position="0 0.296 0" rotation="0 0 0" color="#FFFFFF" 
+<a-video width="1.5" height="1.0" src="#Video_Asset_0" class="intersectable" position="0 0 0" rotation="0 0 0" color="#FFFFFF" 
 ></a-video>
 <!-- END: Unity Compiled Objects -->
 
