--- a/index.html
+++ b/index.html
@@ -95,7 +95,12 @@ if (markerFound == 1) {
     }
 });
 </script>
-<!-- END: Unity Compiled Events -->
+<div style='position: fixed; top: 10px; width:100%; text-align: center; z-index: 1;'>
+    <button class="button1" id="btn1">anterior</button>
+    <button class="button2" id="btn2">siguiente</button>
+    
+   
+  </div> END: Unity Compiled Events -->
 
 <!-- BEGIN: Middle HTML -->
 <body style='margin : 0px; overflow: hidden; font-family: Monospace;'>
@@ -119,6 +124,7 @@ if (markerFound == 1) {
 <!-- BEGIN: Unity Compiled Assets -->
 <a-assets>
 <video id="Video_Asset_0" autoplay="false" loop crossorigin="anonymous" src="videos/Tabla_evolucion_barras_COVID-19.mp4" webkit-playsinline playsinline controls muted></video>
+<video id="Video_Asset_1" autoplay="false" loop crossorigin="anonymous" src="videos/Tabla_evolucion_lineas_COVID-19.mp4" webkit-playsinline playsinline controls muted></video>        
 </a-assets>
 <!-- END: Unity Compiled Assets -->
 <!-- BEGIN: Add Image Target (marker) -->
