--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@ if (markerFound == 1) {
 });
 </script>
 <div style='position: fixed; top: 10px; width:100%; text-align: center; z-index: 1;'>
-    <button class="button1" id="btn1">anterior</button>
-    <button class="button2" id="btn2">siguiente</button>
+    <button class="button" id="btn1">anterior</button>
+    <button class="button" id="btn2">siguiente</button>
     
    
   </div> END: Unity Compiled Events -->
