--- a/index.html
+++ b/index.html
@@ -109,14 +109,16 @@ if (markerFound == 1) {
                 bezierEvaluate(p0.y, p1.y, p2.y, p3.y, t),                   
                 bezierEvaluate(p0.z, p1.z, p2.z, p3.z, t)               
             );
-		function myFunction() {
-				var vid = document.getElementById("Video_Asset_1").src;
-				document.getElementById("Video_Asset_1").innerHTML = vid;
-				}
-		function myFunction2() {
-				var vid = document.getElementById("Video_Asset_0").src;
-				document.getElementById("Video_Asset_0").innerHTML = vid;
-				}						
+		function changeSource(url) {
+  		   var video = document.getElementById('Video_Asset_0');
+   		   video.src = videos/Tabla_evolucion_barras_COVID-19.mp4;
+   		   video.play();
+		}
+		function changeSource2(url) {
+  		   var video = document.getElementById('Video_Asset_0');
+   		   video.src = videos/Tabla_evolucion_lineas_COVID-19.mp4;
+   		   video.play();
+		}	
         }     
     }
 		
@@ -125,8 +127,8 @@ if (markerFound == 1) {
 </script>
 
 <div style='position: fixed; top: 10px; width:100%; text-align: center; z-index: 1;'>
-    <button class="button" id="btn1" onclick="myFunction()">anterior</button>
-    <button class="button" id="btn2" onclick="myFunction2()">siguiente</button>
+    <button class="button" id="btn1" onclick="changeSource()">anterior</button>
+    <button class="button" id="btn2" onclick="changeSource2()">siguiente</button>
  </div>
 
 END: Unity Compiled Events -->
@@ -152,8 +154,7 @@ END: Unity Compiled Events -->
 
 <!-- BEGIN: Unity Compiled Assets -->
 <a-assets>
-<video id="Video_Asset_0" autoplay="false" loop crossorigin="anonymous" src="videos/Tabla_evolucion_barras_COVID-19.mp4" webkit-playsinline playsinline controls muted></video>
-<video id="Video_Asset_1" autoplay="false" loop crossorigin="anonymous" src="videos/Tabla_evolucion_lineas_COVID-19.mp4" webkit-playsinline playsinline controls muted></video>        
+<video id="Video_Asset_0" autoplay="false" loop crossorigin="anonymous" src="videos/Tabla_evolucion_barras_COVID-19.mp4" webkit-playsinline playsinline controls muted></video>     
 </a-assets>
 <!-- END: Unity Compiled Assets -->
 <!-- BEGIN: Add Image Target (marker) -->
