--- a/index.html
+++ b/index.html
@@ -109,14 +109,12 @@ if (markerFound == 1) {
                 bezierEvaluate(p0.y, p1.y, p2.y, p3.y, t),                   
                 bezierEvaluate(p0.z, p1.z, p2.z, p3.z, t)               
             );
-	document.getElementById("btn1").addEventListener("click", (e)=>{
-
- 	 var v = document.querySelector('#Video_Asset_0').muted=false;
-})
-	document.getElementById("btn2").addEventListener("click", (e)=>{
-
- 	 var v = document.querySelector('#Video_Asset_1').muted=false;
-})
+	function changevid(btn1) { 
+    document.getElementById('Video_Asset_0').src = buttonlink;
+}
+	function changevid(btn2) { 
+    document.getElementById('Video_Asset_0').src = buttonlink;
+}
         }     
     }
 		
@@ -125,9 +123,9 @@ if (markerFound == 1) {
 </script>
 
 <div style='position: fixed; top: 10px; width:100%; text-align: center; z-index: 1;'>
-    <button class="button" id="btn1>anterior</button>
-    <button class="button" id="btn2">siguiente</button>
- </div>
+    <button class="button" id="btn1 onclick="videos/Tabla_evolucion_barras_COVID-19.mp4">anterior</button>
+    <button class="button" id="btn2 onclick="videos/Tabla_evolucion_lineas_COVID-19.mp4">anterior</button>											
+</div>
 
 END: Unity Compiled Events -->
 
