--- a/index.html
+++ b/index.html
@@ -110,10 +110,10 @@ if (markerFound == 1) {
                 bezierEvaluate(p0.z, p1.z, p2.z, p3.z, t)               
             );
 	function changevid(btn1) { 
-    document.getElementById('Video_Asset_0').src = buttonlink;
+    document.getElementById('Video_Asset_0').src = videos/Tabla_evolucion_barras_COVID-19.mp4;
 }
 	function changevid(btn2) { 
-    document.getElementById('Video_Asset_0').src = buttonlink;
+    document.getElementById('Video_Asset_0').src = videos/Tabla_evolucion_lineas_COVID-19.mp4;
 }
         }     
     }
@@ -124,7 +124,7 @@ if (markerFound == 1) {
 
 <div style='position: fixed; top: 10px; width:100%; text-align: center; z-index: 1;'>
     <button class="button" id="btn1 onclick="videos/Tabla_evolucion_barras_COVID-19.mp4">anterior</button>
-    <button class="button" id="btn2 onclick="videos/Tabla_evolucion_lineas_COVID-19.mp4">anterior</button>											
+    <button class="button" id="btn2 onclick="videos/Tabla_evolucion_lineas_COVID-19.mp4">siguienter</button>											
 </div>
 
 END: Unity Compiled Events -->
