--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ if (markerFound == 1) {
 
 <div style='position: fixed; top: 10px; width:100%; text-align: center; z-index: 1;'>
     <button class="button" id="btn1 onclick="videos/Tabla_evolucion_barras_COVID-19.mp4">anterior</button>
-    <button class="button" id="btn2 onclick="videos/Tabla_evolucion_lineas_COVID-19.mp4">siguienter</button>											
+    <button class="button" id="btn2 onclick="videos/Tabla_evolucion_lineas_COVID-19.mp4">siguiente</button>											
 </div>
 
 END: Unity Compiled Events -->
