--- a/index.html
+++ b/index.html
@@ -110,10 +110,10 @@ if (markerFound == 1) {
                 bezierEvaluate(p0.z, p1.z, p2.z, p3.z, t)               
             );
 	function changevid(btn1) { 
-    document.getElementById('Video_Asset_0').src = videos/Tabla_evolucion_barras_COVID-19.mp4;
+    document.getElementById('Video_Asset_0').src = buttonlink;
 }
 	function changevid(btn2) { 
-    document.getElementById('Video_Asset_1').src = videos/Tabla_evolucion_lineas_COVID-19.mp4;
+    document.getElementById('Video_Asset_1').src = buttonlink;
 }
         }     
     }
