--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ END: Unity Compiled Events -->
 <!-- BEGIN: Middle HTML -->
 <body style='margin : 0px; overflow: hidden; font-family: Monospace;'>
 
-        <div style='position: absolute; bottom: 10px; right: 30px; width:100%; text-align: center; z-index: 1;'>      
+        <div style='position: absolute; top:10px; right: 30px; width:100%; text-align: center; z-index: 1;'>      
             <button id="mutebutton" style='position: absolute; bottom: 10px'>
                 Unmute
             </button>
