--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ if (markerFound == 1) {
 });
 </script>
 
-<div style='position: fixed; top:250px; width:100%; text-align: center; z-index: 1;'>
+<div style='position: fixed; bottom:30px; width:100%; text-align: center; z-index: 1;'>
     <button class="button" id="btn1 onclick="videos/Tabla_evolucion_barras_COVID-19.mp4">anterior</button>
     <button class="button" id="btn2 onclick="videos/Tabla_evolucion_lineas_COVID-19.mp4">siguiente</button>											
 </div>
@@ -132,13 +132,13 @@ END: Unity Compiled Events -->
 <!-- BEGIN: Middle HTML -->
 <body style='margin : 0px; overflow: hidden; font-family: Monospace;'>
 
-        <div style='position: absolute; top:10px; right: 30px; width:100%; text-align: center; z-index: 1;'>      
+        <div style='position: absolute; bottom:10px; right: 30px; width:100%; text-align: center; z-index: 1;'>      
             <button id="mutebutton" style='position: absolute; bottom: 10px'>
                 Unmute
             </button>
         </div>
 
-        <div style='position: absolute; bottom: 5px; left: 30px; width:100%; text-align: right; z-index: 1;'>
+        <div style='position: absolute; bottom:5px; left: 30px; width:100%; text-align: right; z-index: 1;'>
             <input type="image" id="fullscreen" src="../fullscreen.png" style='position: absolute; bottom: 0px; right: 35px;'>
             </input>
         </div>
