--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ if (markerFound == 1) {
 });
 </script>
 
-<div style='position: fixed; bottom:30px; width:100%; text-align: center; z-index: 1;'>
+<div style='position: fixed; bottom:75px; width:100%; text-align: center; z-index: 1;'>
     <button class="button" id="btn1 onclick="videos/Tabla_evolucion_barras_COVID-19.mp4">anterior</button>
     <button class="button" id="btn2 onclick="videos/Tabla_evolucion_lineas_COVID-19.mp4">siguiente</button>											
 </div>
@@ -134,7 +134,7 @@ END: Unity Compiled Events -->
 
         <div style='position: absolute; bottom:10px; right: 30px; width:100%; text-align: center; z-index: 1;'>      
             <button id="mutebutton" style='position: absolute; bottom: 10px'>
-                Unmute
+                Silenciar
             </button>
         </div>
 
