--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@ if (markerFound == 1) {
 </script>
 
 <div style='position: fixed; bottom:75px; width:100%; text-align: center; z-index: 1;'>
-    <button class="button" id="btn1 onclick="videos/Tabla_evolucion_barras_COVID-19.mp4">anterior</button>
-    <button class="button" id="btn2 onclick="videos/Tabla_evolucion_lineas_COVID-19.mp4">siguiente</button>											
+    <button class="button" id="btn1" onclick="videos/Tabla_evolucion_barras_COVID-19.mp4">anterior</button>
+    <button class="button" id="btn2" onclick="videos/Tabla_evolucion_lineas_COVID-19.mp4">siguiente</button>											
 </div>
 
 END: Unity Compiled Events -->
