--- a/index.html
+++ b/index.html
@@ -114,11 +114,11 @@ if (markerFound == 1) {
                 bezierEvaluate(p0.z, p1.z, p2.z, p3.z, t)               
             );
 	function changevid(btn1) { 
-    document.getElementById('Video_Asset_0').src = buttonlink;
-}
+    document.getElementById('Video_Asset_0').src = btn1;
+		}
 	function changevid(btn2) { 
-    document.getElementById('Video_Asset_0').src = buttonlink;
-}
+    document.getElementById('Video_Asset_0').src = btn2;
+		}
         }     
     }
 		
