--- a/index.html
+++ b/index.html
@@ -113,12 +113,7 @@ if (markerFound == 1) {
                 bezierEvaluate(p0.y, p1.y, p2.y, p3.y, t),                   
                 bezierEvaluate(p0.z, p1.z, p2.z, p3.z, t)               
             );
-	function changevid(btn1) { 
-    document.getElementById('Video_Asset_0').src = btn1;
-		}
-	function changevid(btn2) { 
-    document.getElementById('Video_Asset_0').src = btn2;
-		}
+	
         }     
     }
 		
@@ -127,8 +122,8 @@ if (markerFound == 1) {
 </script>
 
 <div style='position: fixed; bottom:75px; width:100%; text-align: center; z-index: 1;'>
-    <button class="button" id="btn1" onclick="videos/Tabla_evolucion_barras_COVID-19.mp4">anterior</button>
-    <button class="button" id="btn2" onclick="videos/Tabla_evolucion_lineas_COVID-19.mp4">siguiente</button>											
+    <button class="button" id="btn1"</button>
+    <button class="button" id="btn2"</button>											
 </div>
 
 END: Unity Compiled Events -->
