--- a/index.html
+++ b/index.html
@@ -117,11 +117,11 @@ if (markerFound == 1) {
             );
 	function myFunction() {
 		var vid = document.getElementById("Video_Asset_0").src;
-		document.getElementById("a-marker").innerHTML = vid;
+		document.getElementById("Video_Asset_0").innerHTML = vid;
 				}
 	function myFunction2() {
 		var vid = document.getElementById("Video_Asset_1").src;
-		document.getElementById("a-marker").innerHTML = vid;
+		document.getElementById("Video_Asset_0").innerHTML = vid;
 				}						
         }     
     }
