--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@ var marker = document.querySelector("#marker");
 var fullbutton = document.querySelector("#fullscreen");
 var button = document.querySelector("#mutebutton");
 var Video_0 = document.querySelector("#Video_Asset_0");
+var Video_1 = document.querySelector("#Video_Asset_1");
 	
 marker.addEventListener("markerFound", function (evt) {
 markerFound = 1;
@@ -60,6 +61,14 @@ Video_0.muted=false;
 button.innerHTML="Unmute";
 Video_0.muted=true;
 }
+document.getElementById("btn1").addEventListener("click", (e)=>{
+
+  var v = document.querySelector('#Video_Asset_0').show=false;
+})
+document.getElementById("btn2").addEventListener("click", (e)=>{
+
+  var v = document.querySelector('#Video_Asset_1').show=true;
+})
 });
 
         fullbutton.addEventListener("click", function (evt) {
@@ -124,8 +133,8 @@ if (markerFound == 1) {
 </script>
 
 <div style='position: fixed; bottom:70px; width:100%; text-align: center; z-index: 1;'>
-    <button class="button" id="btn1" onclick="myFunction()">anterior</button>
-    <button class="button" id="btn2" onclick="myFunction2()">siguiente</button>
+    <button class="button" id="btn1">anterior</button>
+    <button class="button" id="btn2">siguiente</button>
  </div>
 
 END: Unity Compiled Events -->
@@ -151,7 +160,8 @@ END: Unity Compiled Events -->
 
 <!-- BEGIN: Unity Compiled Assets -->
 <a-assets>
-<video id="Video_Asset_0" autoplay="false" loop crossorigin="anonymous" src="videos/Tabla_evolucion_barras_COVID-19.mp4" webkit-playsinline playsinline controls muted></video>    
+<video id="Video_Asset_0" autoplay="false" loop crossorigin="anonymous" src="videos/Tabla_evolucion_barras_COVID-19.mp4" webkit-playsinline playsinline controls muted></video>
+<video id="Video_Asset_1" autoplay="false" loop crossorigin="anonymous" src="videos/Tabla_evolucion_lineas_COVID-19.mp4" webkit-playsinline playsinline controls muted></video>	
 </a-assets>
 <!-- END: Unity Compiled Assets -->
 <!-- BEGIN: Add Image Target (marker) -->
