--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@ Video_0.muted=true;
 }
 document.getElementById("btn1").addEventListener("click", (e)=>{
 
-  var v = document.querySelector('#Video_Asset_0').show=false;
+  var v = document.querySelector('#Video_Asset_0').visible=false;
 })
 document.getElementById("btn2").addEventListener("click", (e)=>{
 
-  var v = document.querySelector('#Video_Asset_1').show=true;
+  var v = document.querySelector('#Video_Asset_1').visible=true;
 })
 });
 
