--- a/index.html
+++ b/index.html
@@ -1,11 +1,37 @@
-<!doctype html>
-<html lang="en">
-	<!-- Version 04.04.2018; A-Frame 0.80 -->
-	<head>
-		<meta charset="UTF-8">
-		<title>A-Frame Interactivity</title>
-		<script src="js/aframe.min.js"></script>
-		<script>
+<!-- BEGIN: Top HTML -->
+<!DOCTYPE html>
+<!-- include aframe -->
+<script src="https://aframe.io/releases/0.8.2/aframe.min.js"></script>
+<!-- include ar.js -->
+<script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
+
+<!-- to load .ply model -->
+<script src="https://rawgit.com/donmccurdy/aframe-extras/v6.0.0/dist/aframe-extras.loaders.min.js"></script>
+<script src="https://unpkg.com/aframe-event-set-component@3.0.3/dist/aframe-event-set-component.min.js"></script>
+
+<style>
+  .button {
+     
+    background-color: #4CAF50;
+    opacity:1;
+    border: none;
+    color: white;
+    padding: 7px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 12px;
+    margin: 4px 2px;
+    cursor: pointer;
+    border-radius: 6px;
+    border: 2px solid rgba(9, 148, 28, 0.541);
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+  }
+  .button:hover{
+    opacity:0.5;	
+  }
+  
+  </style>
 			function setScene2() {
 				document.querySelector('#scene1').setAttribute('visible', 'false');
 				document.querySelector('#scene2').setAttribute('visible', 'true');
