--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
 				></a-cursor>
 			</a-camera>
 			<a-entity id="scene1">
-				<a-sky src="images/scene_1.jpg"></a-sky>
+				<a-sky src="videos/Tabla_evolucion_barras_COVID-19.mp4"></a-sky>
 				<a-box color="green" position="1 0 -5" onclick="setScene2()"></a-box>
 			</a-entity>
 			<a-entity id="scene2" visible="false">
-				<a-sky src="images/scene_2.jpg"></a-sky>
+				<a-sky src="videos/Tabla_evolucion_lineas_COVID-19.mp4"></a-sky>
 				<a-box color="yellow" position="-1 0 -5" onclick="setScene1()"></a-box>
 			</a-entity>
 		</a-scene>
