--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 				<a-sky src="videos/Tabla_evolucion_lineas_COVID-19.mp4"></a-sky>
 				<a-box color="yellow" position="-1 0 -5" onclick="setScene1()"></a-box>
 			</a-entity>
+			<a-marker id="marker" type="pattern" preset="custom" src="pattern-default-marker.patt" url="pattern-default-marker.patt" emitevents="true" button>
 		</a-scene>
 	</body>
 </html>
